--- a/libECRComms/libECRComms.csproj
+++ b/libECRComms/libECRComms.csproj
@@ -42,18 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClerkData.cs" />
-    <Compile Include="Descriptor.cs" />
+    <Compile Include="DataFiles\ClerkData.cs" />
+    <Compile Include="DataFiles\Descriptor.cs" />
+    <Compile Include="DataFiles\Machines.cs" />
     <Compile Include="ECRComms.cs" />
     <Compile Include="File.cs" />
-    <Compile Include="PLU.cs" />
+    <Compile Include="DataFiles\PLU.cs" />
     <Compile Include="Progress.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Progress.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reports.cs" />
-    <Compile Include="Stock.cs" />
+    <Compile Include="Reports\Reports.cs" />
+    <Compile Include="DataFiles\Stock.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Progress.resx" />
