--- a/libECRComms/libECRComms.csproj
+++ b/libECRComms/libECRComms.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>libECRComms</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,28 +45,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataFiles\ClerkData.cs" />
-    <Compile Include="DataFiles\ClerkLogo.cs" />
-    <Compile Include="DataFiles\Descriptor.cs" />
-    <Compile Include="DataFiles\FinancialLogo.cs" />
-    <Compile Include="DataFiles\FunctionKey.cs" />
-    <Compile Include="DataFiles\Group.cs" />
-    <Compile Include="DataFiles\Macro.cs" />
-    <Compile Include="DataFiles\Misc.cs" />
-    <Compile Include="DataFiles\MixMatch.cs" />
-    <Compile Include="DataFiles\PrintOption.cs" />
-    <Compile Include="DataFiles\SystemOptions.cs" />
-    <Compile Include="DataFiles\Tax.cs" />
+    <Compile Include="Properties\DataFiles\ClerkData.cs" />
+    <Compile Include="Properties\DataFiles\ClerkLogo.cs" />
+    <Compile Include="Properties\DataFiles\Descriptor.cs" />
+    <Compile Include="Properties\DataFiles\FinancialLogo.cs" />
+    <Compile Include="Properties\DataFiles\FunctionKey.cs" />
+    <Compile Include="Properties\DataFiles\Group.cs" />
+    <Compile Include="Properties\DataFiles\Macro.cs" />
+    <Compile Include="Properties\DataFiles\Misc.cs" />
+    <Compile Include="Properties\DataFiles\MixMatch.cs" />
+    <Compile Include="Properties\DataFiles\PrintOption.cs" />
+    <Compile Include="Properties\DataFiles\SystemOptions.cs" />
+    <Compile Include="Properties\DataFiles\Tax.cs" />
     <Compile Include="ECRComms.cs" />
     <Compile Include="File.cs" />
-    <Compile Include="DataFiles\PLU.cs" />
+    <Compile Include="Properties\DataFiles\PLU.cs" />
     <Compile Include="Progress.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Progress.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\Reports.cs" />
-    <Compile Include="DataFiles\Stock.cs" />
+    <Compile Include="Properties\DataFiles\Stock.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Progress.resx" />
